# kvm-gpu-trainer

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  TODO  pyproject.toml  requirements.txt  setup.py  vm-trainer
vm_trainer/: __main__.py  cli.py  device_info.py  machines.py  settings.py  utils.py  yamldoc.py
vm_trainer/components/: dependencies.py  machine.py  network.py  tools.py  user_input.py
vm_trainer/management/: __init__.py  clickgroup.py  dependencies.py  device_info.py  machines.py  network.py  settings.py  tpm_service.py
